<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/add_transaction_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".FragmentAddTransaction">

    <TextView
        android:id="@+id/text_view_add_transaction"
        android:background="@color/md_theme_dark_primary"
        android:textColor="@color/md_theme_light_shadow"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:padding="10dp"
        android:text="@string/add_transaction"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/md_theme_light_shadow"
        android:gravity="center"
        android:background="@color/md_theme_dark_error"
        android:layout_marginTop="0dp"
        android:padding="10dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_add_transaction" />

    <TextView
        android:id="@+id/text_view_rakam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/md_theme_light_shadow"
        android:gravity="center"
        android:background="@color/md_theme_light_tertiaryContainer"
        android:padding="10dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_name" />

    <TextView
        android:id="@+id/text_view_rakam_weight_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/md_theme_light_shadow"
        android:gravity="center"
        android:background="@color/md_theme_light_outlineVariant"
        android:padding="10dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_rakam" />

    <RadioGroup
        android:id="@+id/radioGrpNaameJama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_bkg"
        android:checkedButton="@id/radioBtnNaame"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_rakam_weight_number">

        <RadioButton
            android:id="@+id/radioBtnNaame"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bkg"
            android:text="@string/naame"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="46dp"
            tools:layout_editor_absoluteY="429dp" />

        <RadioButton
            android:id="@+id/radioBtnJama"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bkg"
            android:text="@string/jama"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="247dp" />

    </RadioGroup>

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="number"
        android:gravity="center"
        android:background="@drawable/edit_text_bkg"
        android:hint="@string/amount"
        android:inputType="number"
        android:padding="12dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGrpNaameJama" />

    <EditText
        android:id="@+id/editTextIr"
        android:layout_width="75dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:autofillHints="number"
        android:gravity="center"
        android:background="@drawable/edit_text_bkg"
        android:hint="@string/ir"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAmount" />

    <EditText
        android:id="@+id/editTextRemarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="postalAddress"
        android:background="@drawable/edit_text_bkg"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/remarks"
        android:gravity="center"
        android:inputType="textAutoComplete"
        android:padding="12dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIr" />



    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint = "@string/date"
        android:gravity="center"
        android:ems="10"
        android:selectAllOnFocus="true"
        android:inputType="date"
        android:autofillHints="date"
        android:padding="12dp"
        android:background="@drawable/edit_text_bkg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRemarks" />

    <Button
        android:id="@+id/date_picker_button"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:drawableLeft="@drawable/baseline_calendar_month_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextDate"
        app:layout_constraintTop_toBottomOf="@+id/editTextRemarks"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/add_transaction_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>