<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true"
    android:layout_marginHorizontal="8dp"
    app:cardElevation="5dp">
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/csTransactionItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTranItemType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tranType"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/tvType"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/tvTranItemAmount"
            app:layout_constraintStart_toEndOf="@+id/tvTranItemType"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTranItemAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/tranSearchAmount"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/tvAmount"
            app:layout_constraintStart_toEndOf="@+id/tvType"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/tvTranItemAmount"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTranItemIR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tranSearchIR"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTranItemType" />

        <TextView
            android:id="@+id/tvIR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/tvTranItemDate"
            app:layout_constraintStart_toEndOf="@+id/tvTranItemIR"
            app:layout_constraintTop_toBottomOf="@+id/tvType" />

        <TextView
            android:id="@+id/tvTranItemDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/tranSearchDate"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/tvDate"
            app:layout_constraintStart_toEndOf="@+id/tvIR"
            app:layout_constraintTop_toBottomOf="@+id/tvTranItemAmount" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/tvTranItemDate"
            app:layout_constraintTop_toBottomOf="@+id/tvAmount" />

        <TextView
            android:id="@+id/tvTranItemRemarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tranSearchRemarks"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/tvRemarks"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTranItemIR" />

        <TextView
            android:id="@+id/tvRemarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/tvTranItemRemarks"
            app:layout_constraintTop_toBottomOf="@+id/tvIR" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </HorizontalScrollView>

</com.google.android.material.card.MaterialCardView>